# small_complex_back

./: .env  README.md  compose.yaml  develop.compose.yaml
backend/: Dockerfile  alembic.ini  flake.nix  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7c794cfb305e_.py  9e3f5ff1fd62_.py  bd199d3f7892_.py
backend/app/: Dockerfile  config.py  db.py  deps.py  main.py  model_data.py  model_db.py  secret.py
backend/app/crud/: analytics_crud.py  user_crud.py  video_crud.py
backend/app/routes/: analytics.py  auth.py  login.py  user.py  video.py
